--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <title>Makky | Portfolio</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="shortcut icon" href="./OIP-removebg-preview.ico" type="image/x-icon">
-
-
-
+  <link rel="shortcut icon" href="OIP-removebg-preview.ico" type="image/x-icon">
 </head>
 
 <body>
+  
   <header>
     <div class="container">
       <div class="top-bar">
@@ -30,10 +27,10 @@
         </nav>
       </div>
       <div class="bottom-bar">
-        <img src="photo.jpg" alt="Your Photo">
+        <img src="photo.jpg" alt="Photo">
       </div>
       <h1>Md. Arafauzzaman</h1>
-      <h5> B.Sc in Computer Science and Engineering <br> Jashore University of Science and Technology, Bangladesh</h3>
+      <h5> B.Sc in Computer Science and Engineering <br> Jashore University of Science and Technology, Bangladesh.</h3>
     </div>
   </header>
 
@@ -67,9 +64,6 @@
       </div>
     </div>
   </section>
-
-
-
 
   <section id="skills">
     <div class="container">
@@ -136,9 +130,9 @@
         <li><i class="fas fa-envelope"></i> Email: <a href="mailto:mdamakky@gmail.com">mdamakky@gmail.com</a></li>
         <li><i class="fas fa-phone"></i> Phone: <a href="tel:+8801760345030">+880 1760-345030</a></li>
         <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/md-arafatuzzaman-b79246263/"
-            target="_blank">linkedin.com/in/md-arafatuzzaman-b79246263</a></li>
+            target="_blank">linkedin.com/mdmakky</a></li>
         <li><i class="fab fa-facebook"></i> Facebook: <a href="https://www.facebook.com/md.arafatuzzaman.makky"
-            target="_blank">facebook.com/md.arafatuzzaman.makky</a></li>
+            target="_blank">facebook.com/mdmakky</a></li>
         <li><i class="fab fa-github"></i> GitHub: <a href="https://github.com/mdmakky"
             target="_blank">github.com/mdmakky</a></li>
       </ul>
