Update index.html(minor change.)

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Makky | Portfolio</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="shortcut icon" href="OIP-removebg-preview.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./OIP-removebg-preview.ico" type="image/x-icon">
 </head>
 
 <body>
-  
   <header>
     <div class="container">
       <div class="top-bar">
@@ -27,10 +26,10 @@
         </nav>
       </div>
       <div class="bottom-bar">
-        <img src="photo.jpg" alt="Photo">
+        <img src="photo.jpg" alt="Your Photo">
       </div>
       <h1>Md. Arafauzzaman</h1>
-      <h5> B.Sc in Computer Science and Engineering <br> Jashore University of Science and Technology, Bangladesh.</h3>
+      <h5>B.Sc in Computer Science and Engineering<br>Jashore University of Science and Technology, Bangladesh</h5>
     </div>
   </header>
 
@@ -49,12 +48,9 @@
         </p>
         <p>
           Although I do not have any working experience at the moment, I am dedicated to expanding my knowledge and
-          practical skills in data science. I am constantly learning through online courses, working on personal
+          practical skills in data science. I am constantly learning through online courses and working on personal
           projects to enhance my abilities. My goal is to contribute to the field of data science by leveraging my
-          skills and knowledge to solve complex
-          problems.
-
-
+          skills and knowledge to solve complex problems.
         </p>
         <p>
           Thank you for visiting my portfolio website. I am eager to connect with like-minded individuals,
@@ -130,9 +126,9 @@
         <li><i class="fas fa-envelope"></i> Email: <a href="mailto:mdamakky@gmail.com">mdamakky@gmail.com</a></li>
         <li><i class="fas fa-phone"></i> Phone: <a href="tel:+8801760345030">+880 1760-345030</a></li>
         <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/md-arafatuzzaman-b79246263/"
-            target="_blank">linkedin.com/mdmakky</a></li>
+            target="_blank">linkedin.com/in/md-arafatuzzaman-b79246263</a></li>
         <li><i class="fab fa-facebook"></i> Facebook: <a href="https://www.facebook.com/md.arafatuzzaman.makky"
-            target="_blank">facebook.com/mdmakky</a></li>
+            target="_blank">facebook.com/md.arafatuzzaman.makky</a></li>
         <li><i class="fab fa-github"></i> GitHub: <a href="https://github.com/mdmakky"
             target="_blank">github.com/mdmakky</a></li>
       </ul>
@@ -142,18 +138,16 @@
   <footer>
     <div class="container">
       <div class="footer-content">
-        <p>&copy; 2023 Md. Arafatuzzaman | All rights reserved</p>
+        <p>&copy; All content 2023 Md. Arafatuzzaman | All rights reserved</p>
         <ul class="social-media">
           <li><a href="https://www.linkedin.com/in/md-arafatuzzaman-b79246263/" target="_blank"><i
                 class="fab fa-linkedin"></i></a></li>
-          <li><a href="https://github.com/mdmakky"><i class="fab fa-github" target="_blank"></i></a></li>
+          <li><a href="https://github.com/mdmakky" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a href="https://www.facebook.com/md.arafatuzzaman.makky" target="_blank"><i
                 class="fab fa-facebook"></i></a></li>
         </ul>
       </div>
     </div>
   </footer>
-
 </body>
-
 </html>
