Update index.html(change the contact section)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <title>Makky | Portfolio</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -126,9 +125,9 @@
         <li><i class="fas fa-envelope"></i> Email: <a href="mailto:mdamakky@gmail.com">mdamakky@gmail.com</a></li>
         <li><i class="fas fa-phone"></i> Phone: <a href="tel:+8801760345030">+880 1760-345030</a></li>
         <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/md-arafatuzzaman-b79246263/"
-            target="_blank">linkedin.com/in/md-arafatuzzaman-b79246263</a></li>
+            target="_blank">linkedin.com/in/md-amakky</a></li>
         <li><i class="fab fa-facebook"></i> Facebook: <a href="https://www.facebook.com/md.arafatuzzaman.makky"
-            target="_blank">facebook.com/md.arafatuzzaman.makky</a></li>
+            target="_blank">facebook.com/md.amakky</a></li>
         <li><i class="fab fa-github"></i> GitHub: <a href="https://github.com/mdmakky"
             target="_blank">github.com/mdmakky</a></li>
       </ul>
@@ -138,7 +137,7 @@
   <footer>
     <div class="container">
       <div class="footer-content">
-        <p>&copy; All content 2023 Md. Arafatuzzaman | All rights reserved</p>
+        <p>&copy; 2023 Md. Arafatuzzaman | All rights reserved</p>
         <ul class="social-media">
           <li><a href="https://www.linkedin.com/in/md-arafatuzzaman-b79246263/" target="_blank"><i
                 class="fab fa-linkedin"></i></a></li>
