--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </nav>
       </div>
       <div class="bottom-bar">
-        <img src="photo.jpg" alt="Your Photo">
+        <img src="photo.jpg" alt="Photo">
       </div>
-      <h1>Md. Arafauzzaman</h1>
+      <h1>Md. Arafatuzzaman</h1>
       <h5>B.Sc in Computer Science and Engineering<br>Jashore University of Science and Technology, Bangladesh</h5>
     </div>
   </header>
@@ -125,7 +125,7 @@
         <li><i class="fas fa-envelope"></i> Email: <a href="mailto:mdamakky@gmail.com">mdamakky@gmail.com</a></li>
         <li><i class="fas fa-phone"></i> Phone: <a href="tel:+8801760345030">+880 1760-345030</a></li>
         <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/md-arafatuzzaman-b79246263/"
-            target="_blank">linkedin.com/in/md-amakky</a></li>
+            target="_blank">linkedin.com/md-amakky</a></li>
         <li><i class="fab fa-facebook"></i> Facebook: <a href="https://www.facebook.com/md.arafatuzzaman.makky"
             target="_blank">facebook.com/md.amakky</a></li>
         <li><i class="fab fa-github"></i> GitHub: <a href="https://github.com/mdmakky"
