--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <ul>
             <li>Java</li>
             <li>Python</li>
-            <li>C</li>
+            <!-- <li>C</li> -->
             <li>C++</li>
           </ul>
         </div>
@@ -78,7 +78,7 @@
           <i class="fas fa-database"></i>
           <h3>Database</h3>
           <ul>
-            <li>SQL</li>
+            <!-- <li>SQL</li> -->
             <li>MySQL</li>
           </ul>
         </div>
@@ -88,17 +88,17 @@
           <ul>
             <li>HTML</li>
             <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
+            <!-- <li>JavaScript</li> -->
+            <!-- <li>React</li> -->
           </ul>
         </div>
         <div class="skill">
           <i class="fas fa-chart-bar"></i>
           <h3>Data Science</h3>
           <ul>
-            <li>Machine Learning</li>
-            <li>Data Analysis</li>
-            <li>Data Visualization</li>
+            <!-- <li>Machine Learning</li> -->
+            <!-- <li>Data Analysis</li> -->
+            <!-- <li>Data Visualization</li> -->
           </ul>
         </div>
       </div>
