updated several things like image and others info

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Makky | Portfolio</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="shortcut icon" href="./OIP-removebg-preview.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="photos/OIP-removebg-preview.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -25,10 +25,10 @@
         </nav>
       </div>
       <div class="bottom-bar">
-        <img src="photo.jpg" alt="Photo">
+        <img src="photos/photo.jpg" alt="Photo">
       </div>
       <h1>Md. Arafatuzzaman</h1>
-      <h5>B.Sc in Computer Science and Engineering<br>Jashore University of Science and Technology, Bangladesh</h5>
+      <h3>Web Developer | AI & ML Enthusiast | HTML, CSS, JS Expert</h3>
     </div>
   </header>
 
@@ -37,25 +37,30 @@
       <h2>About Me</h2>
       <div class="about-content">
         <p>
-          Hi, I'm Md. Arafatuzzaman, a Computer Science student at Jashore University of Science and Technology. I have
-          a deep passion for data science and aspire to become a successful data scientist in the future.
+          I am Md. Arafatuzzaman, a dedicated Computer Science student at Jashore University of Science and Technology, 
+          with a strong focus on web development and data science. I bring practical experience in building responsive, 
+          user-centric websites for small and medium-sized businesses, utilizing my proficiency in HTML, CSS3, 
+          and JavaScript to enhance online visibility and functionality.
         </p>
         <p>
-          Currently in my second year of studies, I am actively working towards building a strong foundation in
-          programming, mathematics, and statistics. I believe that these skills are essential for unlocking the
-          potential of data and extracting valuable insights.
+          In addition to my web development expertise, 
+          I am deeply invested in advancing my knowledge in Artificial Intelligence and Machine Learning. 
+          My goal is to leverage these technologies to deliver more intelligent, 
+          data-driven solutions that address complex challenges.
         </p>
+        <br>
         <p>
-          Although I do not have any working experience at the moment, I am dedicated to expanding my knowledge and
-          practical skills in data science. I am constantly learning through online courses and working on personal
-          projects to enhance my abilities. My goal is to contribute to the field of data science by leveraging my
-          skills and knowledge to solve complex problems.
+          Here’s what I offer:
+          <ul>
+            <li>Expertise in HTML, CSS, JavaScript for professional web development</li>
+            <li>AI and Machine Learning integration for enhanced website functionality</li>
+            <li>Full project management, from planning to delivery</li>
+            <li>A strong commitment to clear, regular communication</li>
+          </ul>
         </p>
-        <p>
-          Thank you for visiting my portfolio website. I am eager to connect with like-minded individuals,
-          professionals, and researchers in the field. Please feel free to reach out to me through the contact details
-          provided below. Let's explore the world together!
-        </p>
+       <p>I’m always eager to connect with professionals,
+         researchers, and fellow enthusiasts in both web development and data science.
+          Let’s work together to create impactful, data-driven solutions!</p>
       </div>
     </div>
   </section>
@@ -88,7 +93,7 @@
           <ul>
             <li>HTML</li>
             <li>CSS</li>
-            <!-- <li>JavaScript</li> -->
+            <li>JavaScript</li>
             <!-- <li>React</li> -->
           </ul>
         </div>
@@ -96,9 +101,9 @@
           <i class="fas fa-chart-bar"></i>
           <h3>Data Science</h3>
           <ul>
-            <!-- <li>Machine Learning</li> -->
-            <!-- <li>Data Analysis</li> -->
-            <!-- <li>Data Visualization</li> -->
+            <li>Machine Learning</li>
+            <li>Data Analysis</li>
+            <li>Data Visualization</li>
           </ul>
         </div>
       </div>
@@ -124,7 +129,7 @@
       <ul class="contact-list">
         <li><i class="fas fa-envelope"></i> Email: <a href="mailto:mdamakky@gmail.com">mdamakky@gmail.com</a></li>
         <!-- <li><i class="fas fa-phone"></i> Phone: <a href="tel:+8801760345030">+880 1760-345030</a></li> -->
-        <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/md-arafatuzzaman-b79246263/"
+        <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/md-amakky/"
             target="_blank">linkedin.com/md-amakky</a></li>
         <li><i class="fab fa-facebook"></i> Facebook: <a href="https://www.facebook.com/md.arafatuzzaman.makky"
             target="_blank">facebook.com/md.amakky</a></li>
@@ -137,9 +142,9 @@
   <footer>
     <div class="container">
       <div class="footer-content">
-        <p>&copy; 2023 Md. Arafatuzzaman | All rights reserved</p>
+        <p>&copy; 2024 Md. Arafatuzzaman | All rights reserved</p>
         <ul class="social-media">
-          <li><a href="https://www.linkedin.com/in/md-arafatuzzaman-b79246263/" target="_blank"><i
+          <li><a href="https://www.linkedin.com/in/md-amakky/" target="_blank"><i
                 class="fab fa-linkedin"></i></a></li>
           <li><a href="https://github.com/mdmakky" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a href="https://www.facebook.com/md.arafatuzzaman.makky" target="_blank"><i
