modified the layout and added sidebar

--- a/index.html
+++ b/index.html
@@ -8,22 +8,49 @@
   <link rel="stylesheet" href="updated_style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> 
   <link rel="shortcut icon" href="photos/OIP-removebg-preview.ico" type="image/x-icon"> 
-
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  />
+  <link
+    rel="shortcut icon"
+    href="photos/OIP-removebg-preview.ico"
+    type="image/x-icon"
+    rel="shortcut icon" href="photos/OIP-removebg-preview.ico" type="image/x-icon"> 
+  <script defer src="script.js"></script>
 </head>
 
 <body>
   <header>
     <div class="container">
       <div class="top-bar">
-        <nav>
+        <!-- Hamburger icon for mobile view -->
+        <div class="hamburger">
+          <i class="fas fa-bars"></i>
+        </div>
+
+        <!-- Desktop Navigation -->
+        <nav id="desktop-nav">
           <ul>
-            <li><a href="./project.html"><i class="fas fa-tasks"></i>Projects</a></li>
+            <li><a href="./project.html"><i class="fas fa-tasks"></i> Projects</a></li>
             <li><a href="https://github.com/mdmakky" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
           </ul>
         </nav>
       </div>
+
+      <!-- Mobile Navigation (hidden by default) -->
+      <nav id="mobile-nav">
+        <div class="close-btn">
+          <i class="fas fa-times"></i>
+        </div>
+        <ul>
+          <li><a href="./project.html"><i class="fas fa-tasks"></i> Projects</a></li>
+          <li><a href="https://github.com/mdmakky" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
+        </ul>
+      </nav>
+
       <div class="bottom-bar">
-        <img src="photos/photo.jpg" alt="Photo">
+        <img src="./photos/photo.jpg" alt="Photo">
       </div>
       <h1>Md. Arafatuzzaman</h1>
       <h3>Web Developer | AI & ML Enthusiast | HTML, CSS, JS Expert</h3>
