--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Makky | Portfolio</title>
-  <link rel="stylesheet" href="updated_style.css">
+  <link rel="stylesheet" href="./css/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> 
   <link rel="shortcut icon" href="photos/OIP-removebg-preview.ico" type="image/x-icon"> 
   <link
