--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <p>
-              I am Md. Arafatuzzaman, a Computer Science student at Jashore University of Science and Technology, specializing in web development and data science. With expertise in HTML, CSS, and JavaScript, I build responsive websites that enhance user experience and business functionality.
+              I am Md. Arafatuzzaman, a Computer Science student at <a href="https://www.just.edu.bd/" target="_blank">Jashore University of Science and Technology</a>, specializing in web development and data science. With expertise in HTML, CSS, and JavaScript, I build responsive websites that enhance user experience and business functionality.
             </p>
             <p>
                 Beyond web development, I'm diving deep into Artificial Intelligence and Machine Learning to apply data-driven solutions to complex challenges.  
@@ -133,7 +133,7 @@
   <footer>
     <div class="container">
         <div class="footer-content">
-            <p>&copy; 2024 Md. Arafatuzzaman | All rights reserved</p>
+            <p>&copy; 2025 Md. Arafatuzzaman | All rights reserved</p>
             <ul class="social-media">
                 <li><a href="https://www.linkedin.com/in/md-amakky/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                 <li><a href="https://github.com/mdmakky" target="_blank"><i class="fab fa-github"></i></a></li>
