--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
         <nav class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <!-- Logo -->
-                <a href="#home" class="text-xl font-bold font-poppins group">
-                    <span class="text-gray-900 dark:text-white">Arafat</span>
-                    <span class="text-primary animate-pulse">.</span>
+                <a href="#home" class="logo-brand text-xl font-bold font-poppins group flex items-center gap-1">
+                    <span class="relative text-gray-900 dark:text-white transition-all duration-300 group-hover:text-primary">
+                        Arafat
+                        <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-gradient-to-r from-primary to-accent group-hover:w-full transition-all duration-300"></span>
+                    </span>
+                    <span class="text-primary animate-pulse text-2xl">•</span>
                 </a>
                 
                 <!-- Desktop Navigation -->
@@ -436,32 +439,32 @@
                         <div>
                             <p class="text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2 uppercase tracking-wider">Backend & Frameworks</p>
                             <div class="flex flex-wrap gap-2">
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Django</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">FastAPI</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Python</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">REST API</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fab fa-python mr-1"></i>Python</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-cube mr-1"></i>Django</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-rocket mr-1"></i>FastAPI</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-plug mr-1"></i>REST API</span>
                             </div>
                         </div>
                         <!-- Frontend -->
                         <div>
                             <p class="text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2 uppercase tracking-wider">Frontend & UI</p>
                             <div class="flex flex-wrap gap-2">
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">React.js</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">JavaScript (ES6+)</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">HTML5</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">CSS3</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">TailwindCSS</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Bootstrap</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">EJS</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fab fa-react mr-1"></i>React.js</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fab fa-js-square mr-1"></i>JavaScript</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fab fa-html5 mr-1"></i>HTML5</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fab fa-css3-alt mr-1"></i>CSS3</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-wind mr-1"></i>Tailwind</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fab fa-bootstrap mr-1"></i>Bootstrap</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-file-code mr-1"></i>EJS</span>
                             </div>
                         </div>
                         <!-- Database -->
                         <div>
                             <p class="text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2 uppercase tracking-wider">Databases</p>
                             <div class="flex flex-wrap gap-2">
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">PostgreSQL</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">SQLite</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">ChromaDB (Vector DB)</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-database mr-1"></i>PostgreSQL</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-cube mr-1"></i>SQLite</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-vector-square mr-1"></i>ChromaDB</span>
                             </div>
                         </div>
                     </div>
@@ -480,19 +483,19 @@
                         <div>
                             <p class="text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2 uppercase tracking-wider">Frameworks & Libraries</p>
                             <div class="flex flex-wrap gap-2">
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">LangChain</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Google Gemini AI</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">RAG Systems</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">PyTorch</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-chain mr-1"></i>LangChain</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-brain mr-1"></i>Gemini AI</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-magnifying-glass mr-1"></i>RAG</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-cube mr-1"></i>PyTorch</span>
                             </div>
                         </div>
                         <!-- IoT & Hardware -->
                         <div>
                             <p class="text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2 uppercase tracking-wider">IoT & Hardware</p>
                             <div class="flex flex-wrap gap-2">
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Raspberry Pi</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Computer Vision</span>
-                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Sensor Integration</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-microchip mr-1"></i>Raspberry Pi</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-eye mr-1"></i>Computer Vision</span>
+                                <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-plug-circle-bolt mr-1"></i>Sensors</span>
                             </div>
                         </div>
                     </div>
@@ -507,11 +510,11 @@
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Tools & Platforms</h3>
                     </div>
                     <div class="flex flex-wrap gap-2">
-                        <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Git</span>
-                        <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">GitHub</span>
-                        <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Vite</span>
-                        <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Linux</span>
-                        <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default">Docker</span>
+                        <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fab fa-git-alt mr-1"></i>Git</span>
+                        <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fab fa-github mr-1"></i>GitHub</span>
+                        <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fas fa-bolt mr-1"></i>Vite</span>
+                        <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fab fa-linux mr-1"></i>Linux</span>
+                        <span class="skill-badge hover:scale-105 hover:shadow-md cursor-default"><i class="fab fa-docker mr-1"></i>Docker</span>
                     </div>
                 </div>
             </div>
