--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li><a href="#projects" class="nav-link text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Projects</a></li>
                     <li><a href="#contact" class="nav-link text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">Contact</a></li>
                     <li>
-                        <a href="assets/resume.pdf" download="Arafat_Resume.pdf" class="nav-resume-btn px-4 py-2 bg-gradient-to-r from-primary to-accent text-white rounded-lg text-xs font-semibold shadow-lg shadow-primary/40 hover:shadow-primary/60 flex items-center gap-2">
+                        <a href="assets/Arafat_Resume.pdf" download="Arafat_Resume.pdf" class="nav-resume-btn px-4 py-2 bg-gradient-to-r from-primary to-accent text-white rounded-lg text-xs font-semibold shadow-lg shadow-primary/40 hover:shadow-primary/60 flex items-center gap-2">
                             <i class="fas fa-download text-xs"></i>
                             <span>Resume</span>
                         </a>
@@ -88,7 +88,7 @@
                 <!-- Mobile Menu -->
                 <div class="flex items-center gap-4">
                     <!-- Resume Button Mobile -->
-                    <a href="assets/resume.pdf" download="Arafat_Resume.pdf" class="md:hidden px-3 py-2 bg-gradient-to-r from-primary to-accent text-white rounded-lg text-xs font-semibold shadow-lg hover:shadow-primary/60 transition-all">
+                    <a href="assets/Arafat_Resume.pdf" download="Arafat_Resume.pdf" class="md:hidden px-3 py-2 bg-gradient-to-r from-primary to-accent text-white rounded-lg text-xs font-semibold shadow-lg hover:shadow-primary/60 transition-all">
                         <i class="fas fa-download"></i>
                     </a>
                     
@@ -142,7 +142,7 @@
                     
                     <!-- CTA Buttons -->
                     <div class="flex flex-wrap gap-4 mb-8">
-                        <a href="assets/resume.pdf" download="Arafat_Resume.pdf" class="btn-premium group px-8 py-4 bg-gradient-to-r from-primary to-secondary hover:from-primary/90 hover:to-secondary/90 text-white rounded-xl font-semibold transition-all shadow-lg shadow-primary/50 hover:shadow-2xl hover:shadow-primary/60 hover:-translate-y-2 hover:scale-105 flex items-center gap-2">
+                        <a href="assets/Arafat_Resume.pdf" download="Arafat_Resume.pdf" class="btn-premium group px-8 py-4 bg-gradient-to-r from-primary to-secondary hover:from-primary/90 hover:to-secondary/90 text-white rounded-xl font-semibold transition-all shadow-lg shadow-primary/50 hover:shadow-2xl hover:shadow-primary/60 hover:-translate-y-2 hover:scale-105 flex items-center gap-2">
                             <span>Download Resume</span>
                             <i class="fas fa-download group-hover:translate-y-1 transition-transform"></i>
                         </a>
@@ -159,7 +159,7 @@
                         <a href="https://facebook.com/md.arafatuzzaman.makky" target="_blank" class="w-14 h-14 flex items-center justify-center rounded-2xl bg-white/5 backdrop-blur-md border border-white/10 text-gray-300 hover:border-blue-400 hover:text-white hover:bg-blue-400/20 transition-all hover:scale-110 shadow-lg">
                             <i class="fab fa-facebook text-2xl"></i>
                         </a>
-                        <a href="https://instagram.com/" target="_blank" class="w-14 h-14 flex items-center justify-center rounded-2xl bg-white/5 backdrop-blur-md border border-white/10 text-gray-300 hover:border-pink-500 hover:text-white hover:bg-pink-500/20 transition-all hover:scale-110 shadow-lg">
+                        <a href="https://instagram.com/a._makky" target="_blank" class="w-14 h-14 flex items-center justify-center rounded-2xl bg-white/5 backdrop-blur-md border border-white/10 text-gray-300 hover:border-pink-500 hover:text-white hover:bg-pink-500/20 transition-all hover:scale-110 shadow-lg">
                             <i class="fab fa-instagram text-2xl"></i>
                         </a>
                     </div>
@@ -829,8 +829,6 @@
                     <div class="relative h-64 overflow-hidden bg-gradient-to-br from-purple-600 to-pink-500 flex items-center justify-center group">
                         <div class="carousel-container h-full" id="fakhim-carousel" onload="document.getElementById('fakhim-fallback').style.display='none'">
                             <img src="assets/images/projects/fakhim-ai/screenshot-1.png" alt="Fakhim AI Screenshot 1" class="carousel-image w-full h-full object-cover" onerror="document.getElementById('fakhim-carousel').style.display='none';document.getElementById('fakhim-fallback').style.display='flex'">
-                            <img src="assets/images/projects/fakhim-ai/screenshot-2.png" alt="Fakhim AI Screenshot 2" class="carousel-image w-full h-full object-cover hidden">
-                            <img src="assets/images/projects/fakhim-ai/screenshot-3.png" alt="Fakhim AI Screenshot 3" class="carousel-image w-full h-full object-cover hidden">
                         </div>
                         <!-- Fallback Icon -->
                         <div class="absolute inset-0 flex items-center justify-center bg-gradient-to-br from-purple-600 to-pink-500" id="fakhim-fallback" style="display:none">
@@ -849,8 +847,6 @@
                         <!-- Dots Indicator -->
                         <div class="carousel-dots absolute bottom-3 left-1/2 -translate-x-1/2 flex gap-2">
                             <span class="dot w-2 h-2 rounded-full bg-white cursor-pointer active shadow-sm"></span>
-                            <span class="dot w-2 h-2 rounded-full bg-white/50 cursor-pointer shadow-sm"></span>
-                            <span class="dot w-2 h-2 rounded-full bg-white/50 cursor-pointer shadow-sm"></span>
                         </div>
                     </div>
                     <div class="p-6">
@@ -1158,7 +1154,7 @@
                         <a href="#contact" class="px-8 py-4 bg-gradient-to-r from-primary to-accent text-white rounded-xl font-semibold hover:shadow-lg hover:shadow-primary/50 transition-all hover:-translate-y-1">
                             Get in Touch
                         </a>
-                        <a href="assets/resume.pdf" download="Arafat_Resume.pdf" class="px-8 py-4 bg-white/10 text-white border-2 border-primary/40 rounded-xl font-semibold hover:bg-primary/10 transition-all hover:border-primary">
+                        <a href="assets/Arafat_Resume.pdf" download="Arafat_Resume.pdf" class="px-8 py-4 bg-white/10 text-white border-2 border-primary/40 rounded-xl font-semibold hover:bg-primary/10 transition-all hover:border-primary">
                             Download Resume
                         </a>
                     </div>
